--- a/index.css
+++ b/index.css
@@ -1,7 +1,5 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
-    background-image: url("./images/table.png");
-    background-size: cover;
     font-weight: bold;
     color: white;
     text-align: center;
@@ -28,4 +26,19 @@ button {
     border-radius: 2px;
     margin-bottom: 2px;
     margin-top: 2px;
+}
+#blackjack-card1 {
+    height: 300px;
+    width: 300px;
+    display:block;
+    margin: 100px auto;
+    background-image: url("./images/table.png");
+    background-size: cover;
+    
+}
+#blackjack-card2 {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
